--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/qs": "^6.9.15",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.376.0",
+    "lucide-react": "^0.462.0",
     "next": "14.2.10",
     "next-auth": "^4.24.7",
     "nextjs-toploader": "^1.6.12",
