--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/qs": "^6.9.15",
+    "@vercel/blob": "^0.26.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
