--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.462.0",
     "next": "14.2.10",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.4.3",
     "nextjs-toploader": "^1.6.12",
     "prisma": "^6.0.0",
     "qs": "^6.12.1",
