--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,7 @@
   "rules": {
     "@next/next/no-img-element": "off",
     "jsx-a11y/alt-text": "off"
+//    "react/no-unescaped-entities": "off",
+//    "@next/next/no-page-custom-font": "off"
   }
 }
